Login finalizado y adelanto de las otras pantallas

--- a/backlog/templates/auth/change_password.html
+++ b/backlog/templates/auth/change_password.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Cambiar contraseña</title>
+       <link rel="stylesheet" href="{% static 'backlog/auth.css' %}?v=1">
 </head>
 <body>
     <h2>🔑 Cambiar contraseña</h2>
