--- a/backlog/templates/auth/login.html
+++ b/backlog/templates/auth/login.html
@@ -4,10 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Login - NEUSI Task Manager</title>
-  <link rel="stylesheet" href="{% static 'backlog/styles.css' %}">
+   <link rel="stylesheet" href="{% static 'backlog/login.css' %}?v=logo2">
 </head>
 <body>
+      <!-- Bloque de marca -->
+  <div class="brand">
+    <img src="{% static 'backlog/img/logo.png' %}" alt="Logo Neusi" class="brand-logo">
     <h2>🔑 Iniciar sesión</h2>
+  </div>
     {% if messages %}
         <ul>
             {% for message in messages %}
@@ -24,4 +28,7 @@
         <input type="password" name="password" id="password"><br><br>
         <button type="submit">Entrar</button>
     </form>
+     <!-- Efecto “polygons + scan line” (JS externo) -->
+  <script src="{% static 'backlog/login-effects.js' %}"></script>
 </body>
+</html>
