--- a/backlog/templates/backlog/backlog_lista.html
+++ b/backlog/templates/backlog/backlog_lista.html
@@ -5,7 +5,10 @@
     <title>🚀 NEUSI Task Manager</title>
     <!-- Bootstrap (necesario para modales) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
+   
+     <link rel="stylesheet" href="{% static 'backlog/backlog.css' %}?v=1">
+   
+   <style>
         .btn {
             padding: 6px 12px;
             margin: 3px;
