--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>NEUSI Task Manager</title>
+
+    {# Aquí se inyecta el CSS específico de cada página (home.css, login.css, etc.) #}
+    {% block extra_css %}{% endblock %}
 </head>
 <body>
     <header style="background:#f5f5f5; padding:10px; margin-bottom:20px; border-bottom:2px solid #ccc;">
@@ -12,5 +16,6 @@
     <main>
         {% block content %}{% endblock %}
     </main>
+
 </body>
 </html>
