--- a/backlog/templates/backlog/epica_detail.html
+++ b/backlog/templates/backlog/epica_detail.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
+{% load static %}
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'backlog/epicas-detail.css' %}?v=4">
+{% endblock %}
 {% block content %}
+
 <div class="d-flex justify-content-between align-items-center mb-2">
   <h4 class="mb-0">{{ epica.titulo }}</h4>
   <div class="d-flex gap-2">
@@ -50,5 +55,7 @@
       </tbody>
     </table>
   </div>
+</div>
+<a class="btn btn-outline-secondary" href="{% url 'epica_list' %}">Volver ⬅️</a>
 </div>
 {% endblock %}
