--- a/backlog/templates/backlog/epica_list.html
+++ b/backlog/templates/backlog/epica_list.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
+{% load static %}
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'backlog/epicas-list.css' %}?v=4">
+{% endblock %}
 {% block content %}
+
 <div class="d-flex justify-content-between align-items-center mb-3">
   <h4>🧱 Épicas</h4>
   {% if admin %}
@@ -41,7 +46,7 @@
             <td class="text-end">
               {% if admin %}
                 <a class="btn btn-sm btn-outline-secondary" href="{% url 'epica_edit' e.id %}">✏️</a>
-                <a class="btn btn-sm btn-outline-danger" href="{% url 'epica_delete' e.id %}">🗑️</a>
+            <!--    <a class="btn btn-sm btn-outline-danger" href="{% url 'epica_delete' e.id %}">🗑️</a>-->
               {% endif %}
             </td>
           </tr>
@@ -51,5 +56,7 @@
       </tbody>
     </table>
   </div>
+</div>
+<a href="{% url 'backlog_lista' %}" class="btn btn-secondary">↩️ Volver al Backlog</a>
 </div>
 {% endblock %}
